--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -41,18 +41,40 @@ td {
  font-weight: 200;
 }
 
-.input-field {
-  position: relative;
-  margin-bottom: 1rem;
+.visually-hidden {
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  white-space: nowrap;
 }
 
-label {
-  display: block;
-  margin-bottom: 0.5rem;
+
+/* ______
+
+body {
+  background: radial-gradient(circle, rgb(252, 253, 255) 0%, rgb(236, 245, 243) 100%);
+  font-family: 'Atkinson Hyperlegible', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-select {
-  display: block;
+.container {
+  width: 80%;
+}
+
+#login-img {
+  width: 15%;
+}
+
+#booking-form {
+  max-width: 30%;
+}
+
+input, select, textarea {
   width: 100%;
   padding: 0.5rem;
   font-size: 1rem;
@@ -62,12 +84,39 @@ select {
   background-clip: padding-box;
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
-  appearance: none; /* Removes default select arrow */
 }
 
-select:focus {
+input:focus, select:focus, textarea:focus {
   outline: none;
   border-color: #66afe9;
   box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.25);
 }
 
+label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.button {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #0069d9;
+  border-color: #0062cc;
+} */
