--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,7 @@ body {
   background: radial-gradient(circle, rgb(252, 253, 255) 0%, rgb(236, 245, 243) 100%);
   font-family: 'Atkinson Hyperlegible', sans-serif;
   height: 100%;
+  cursor: pointer;
 }
 
 .background-image {
@@ -9,6 +10,18 @@ body {
   background-size: cover;
   background-position: center;
   height: 100vh;
+  position: relative;
+}
+
+.background-image::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.6); /* Adjust the rgba values to change the overlay color and opacity */
+  z-index: 1;
 }
 
 .login-container {
@@ -17,8 +30,12 @@ body {
   align-items: left;
   justify-content: left;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.8);
   padding: 10px;
+}
+
+.background-image > * {
+  position: relative;
+  z-index: 2;
 }
 
 h1 {
