--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: radial-gradient(circle, rgb(252, 253, 255) 0%, rgb(236, 245, 243) 100%);
+  background: radial-gradient(circle, rgb(245, 249, 252) 0%, rgb(242, 249, 248) 100%);
   font-family: 'Atkinson Hyperlegible', sans-serif;
   height: 100%;
   cursor: pointer;
@@ -20,7 +20,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.6); /* Adjust the rgba values to change the overlay color and opacity */
+  background-color: rgba(255, 255, 255, 0.6); 
   z-index: 1;
 }
 
@@ -30,7 +30,6 @@ body {
   align-items: left;
   justify-content: left;
   height: 100%;
-  padding: 10px;
 }
 
 .background-image > * {
@@ -38,23 +37,31 @@ body {
   z-index: 2;
 }
 
-h1 {
-  text-align: left;
-}
-
 .login-form {
   max-width: 400px;
-  width: 100%;
+  width: 400%;
   margin: 20px;
   text-align: center;
 }
 
-.hidden {
-  display: none;
+h1 {
+  text-align: left;
+  margin: 2rem;
 }
 
-#booking-form {
-  max-width: 30%;
+main {
+  display: flex;
+  width: 80%;
+  margin: auto;
+
+}
+
+.book-form {
+  max-width: 55%;
+  background-color:rgb(250, 214, 182);
+  padding: 1em;
+  border-radius: .5rem;
+  margin-top: 1em;
 }
 
 .trip-table {
@@ -71,6 +78,7 @@ th, td {
   padding-right: .6rem;
   padding-left: .3rem;
   border-collapse: collapse;
+  background-color: white;
 }
 
 th {
@@ -79,7 +87,7 @@ th {
 }
 
 td {
- font-size: .7rem;
+ font-size: .8rem;
  font-weight: 200;
 }
 
@@ -93,72 +101,7 @@ td {
   white-space: nowrap;
 }
 
-
-/* ______
-
-body {
-  background: radial-gradient(circle, rgb(252, 253, 255) 0%, rgb(236, 245, 243) 100%);
-  font-family: 'Atkinson Hyperlegible', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.hidden {
+  display: none;
 }
 
-.container {
-  width: 80%;
-}
-
-#login-img {
-  width: 15%;
-}
-
-#booking-form {
-  max-width: 30%;
-}
-
-input, select, textarea {
-  width: 100%;
-  padding: 0.5rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  color: #495057;
-  background-color: #fff;
-  background-clip: padding-box;
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-}
-
-input:focus, select:focus, textarea:focus {
-  outline: none;
-  border-color: #66afe9;
-  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.25);
-}
-
-label {
-  display: block;
-  margin-bottom: 0.5rem;
-}
-
-.button {
-  display: inline-block;
-  font-weight: 400;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  user-select: none;
-  border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
-  cursor: pointer;
-}
-
-.button:hover {
-  background-color: #0069d9;
-  border-color: #0062cc;
-} */
